# template-rust

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  deny.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/: main.rs
